fix squishing images on narrow screens

--- a/css/site.styl
+++ b/css/site.styl
@@ -274,7 +274,7 @@ html
   background-color: $color-white-soft
   img
     max-width: 100%
-    height: 80vh
+    max-height: 80vh
     margin: 0 auto
   &.drawing
     background-color: $color-light-gray
